[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "loghound"
dynamic = ["version"]
description = "Pretty Print Log Visualizer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Juan Maturino", email = "nobody@fast.ai"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
	"fastcore>=1.12.2",
	"rich", 
	"pyyaml"
]

[project.scripts]
loghound = "loghound.core:main"

[project.urls]
Repository = "https://github.com/jjmaturino/loghound"
Documentation = "https://jjmaturino.github.io/loghound/"

[project.entry-points.nbdev]
loghound = "loghound._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "loghound.__version__"}

[tool.setuptools.packages.find]
include = ["loghound"]

[tool.nbdev]
